--- a/main_window.ui
+++ b/main_window.ui
@@ -1418,6 +1418,65 @@
         <string>TextLabel</string>
        </property>
       </widget>
+      <widget class="QLabel" name="label_26">
+       <property name="geometry">
+        <rect>
+         <x>310</x>
+         <y>23</y>
+         <width>81</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Courier New</family>
+         <pointsize>14</pointsize>
+         <italic>true</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>по игроку</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="Button_filter">
+       <property name="geometry">
+        <rect>
+         <x>792</x>
+         <y>20</y>
+         <width>73</width>
+         <height>32</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Фильтр</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="Button_reset_filter">
+       <property name="geometry">
+        <rect>
+         <x>792</x>
+         <y>42</y>
+         <width>73</width>
+         <height>32</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Сброс</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox_find_name">
+       <property name="geometry">
+        <rect>
+         <x>290</x>
+         <y>40</y>
+         <width>141</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
@@ -1863,7 +1922,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="4" column="0">
       <widget class="QPushButton" name="Button_proba">
        <property name="text">
         <string>Проба</string>
