--- a/main_window.ui
+++ b/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1399</width>
-    <height>697</height>
+    <width>1396</width>
+    <height>699</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1055,6 +1055,9 @@
        <property name="text">
         <string>Ok</string>
        </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
       </widget>
       <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
@@ -1342,15 +1345,18 @@
         <rect>
          <x>10</x>
          <y>40</y>
-         <width>131</width>
+         <width>121</width>
          <height>26</height>
         </rect>
+       </property>
+       <property name="editable">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_14">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>25</x>
          <y>23</y>
          <width>91</width>
          <height>16</height>
@@ -1370,7 +1376,7 @@
       <widget class="QComboBox" name="comboBox_filter_played">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>141</x>
          <y>40</y>
          <width>131</width>
          <height>26</height>
@@ -1380,7 +1386,7 @@
       <widget class="QLabel" name="label_25">
        <property name="geometry">
         <rect>
-         <x>153</x>
+         <x>145</x>
          <y>23</y>
          <width>121</width>
          <height>16</height>
@@ -1411,6 +1417,7 @@
          <family>Times New Roman</family>
          <pointsize>14</pointsize>
          <weight>75</weight>
+         <italic>true</italic>
          <bold>true</bold>
         </font>
        </property>
@@ -1421,7 +1428,7 @@
       <widget class="QLabel" name="label_26">
        <property name="geometry">
         <rect>
-         <x>310</x>
+         <x>304</x>
          <y>23</y>
          <width>81</width>
          <height>16</height>
@@ -1467,7 +1474,7 @@
       <widget class="QComboBox" name="comboBox_find_name">
        <property name="geometry">
         <rect>
-         <x>290</x>
+         <x>282</x>
          <y>40</y>
          <width>141</width>
          <height>26</height>
@@ -1528,9 +1535,9 @@
      </rect>
     </property>
     <property name="sizePolicy">
-     <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+     <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
       <horstretch>0</horstretch>
-      <verstretch>4</verstretch>
+      <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="font">
@@ -1540,8 +1547,17 @@
       <italic>true</italic>
      </font>
     </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
     <property name="lineWidth">
      <number>2</number>
+    </property>
+    <property name="midLineWidth">
+     <number>0</number>
     </property>
     <property name="verticalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOn</enum>
@@ -1603,7 +1619,7 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
@@ -1938,7 +1954,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1399</width>
+     <width>1396</width>
      <height>21</height>
     </rect>
    </property>
